deploy/istio-federation/service-entry-eu-west.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: eu-west-services
  namespace: compliance
spec:
  hosts:
    - "*.eu-west.lexicon.internal"
  location: MESH_INTERNAL
  ports:
    - number: 8000
      name: http
      protocol: HTTP
  resolution: DNS
